--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
-            <li>About</li>
-            <li>Contact</li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </nav>
 </header>
@@ -16,7 +16,6 @@
 <div class=xs-12-columns>
 <h1>Welcome to my coding blog</h1>
 </div>
-
 <h2>Hello world</h2>
 </body>
 </html>
